@startuml
skinparam classAttributeIconSize 0
hide circle

title DeletePetCommand Class Diagram

interface "<<interface>>\nCommand" as Command {
    + exec(args: String) : void
}

class DeletePetCommand {
    - {static} LOGGER: Logger
    - {static} SYNTAX : String
    + DeletePetCommand(pets: PetList)
    + exec(args: String) : void
    - getPetName(input: String) : String
}

class PetList {
    + deletePet(petToDelete: Pet) : boolean
}

class Pet {
    - name : String
        - species : String
        - age : int
        + Pet(String name, String species, int age)
}

Command <|.. DeletePetCommand

DeletePetCommand --> "1" PetList : has >

PetList *--> "*" Pet : has ArrayList >


DeletePetCommand -right[hidden]- PetList


@enduml